# DeepResearch

./: .cursorrules  .env  .gitignore  README.md  main.py  pyproject.toml  test.py
data/: example_eagle.txt  example_lion.txt  example_zebra.txt
src/: chat.py  chroma_init.py  chroma_queries.py  deepresearch_agent.py  internet_search.py  models.py  pipelines.py  planner_agent.py  prompts.py  rag_formatter.py
