[project]
name = "qa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.6.3",
    "duckduckgo-search>=7.5.3",
    "langchain>=0.3.21",
    "langchain-chroma>=0.2.2",
    "langchain-ollama>=0.3.0",
    "pydantic-ai>=0.0.43",
    "langchain-core>=0.3.0",
    "typing_extensions>=4.0.0",
    "logfire>=3.9.0",
    "langchain-community>=0.3.20",
]
